# compiler-construction

./: .gitignore  Cargo.toml  Dockerfile.gcc  Rakefile  ReadMe.md  aliases.js  parse-test.sh  rustfmt.toml  search-index.js  settings.html  source-files.js
faliures/: supersemanticfailer9000.mc  supersyntaxfailer8000.mc
mc_asm/: Cargo.toml  all.html  fn.cli.html  fn.mc_asm.html  index.html  macro.i.html  macro.l!.html  macro.l.html  sidebar-items.js  trait.ToAsm.html
mc_asm/asm/: index.html  sidebar-items.js  struct.Asm.html
mc_asm/register/: enum.Reg32.html  enum.Reg8.html  index.html  sidebar-items.js
mc_asm/src/: asm.rs  lib.rs  main.rs  register.rs  stack.rs  storage.rs  to_asm.rs
mc_asm/stack/: index.html  sidebar-items.js  struct.Stack.html
mc_asm/storage/: enum.Offset.html  enum.Storage.html  enum.StorageType.html  index.html  sidebar-items.js  struct.Pointer.html
mc_asm/tests/: integration.rs
mc_asm/to_asm/: fn.add_builtin_function.html  fn.add_float.html  fn.add_string.html  fn.calc_index_offset.html  fn.calculate_alignment.html  fn.extend_to_multiple.html  fn.index_expression_to_asm.html  fn.load_float.html  fn.map_function_name.html  index.html  sidebar-items.js  struct.Asm.html  struct.Stack.html  trait.ToAsm.html
mc_ast_to_dot/: Cargo.toml  all.html  fn.cli.html  fn.mc_ast_to_dot.html  fn.write_graph.html  index.html  sidebar-items.js
mc_ast_to_dot/add_to_graph/: index.html  sidebar-items.js  trait.AddToGraph.html  type.AstGraph.html
mc_ast_to_dot/src/: add_to_graph.rs  lib.rs  main.rs
mc_ast_to_dot/tests/: integration.rs
mc_cfg_to_dot/: Cargo.toml  all.html  fn.cli.html  fn.mc_cfg_to_dot.html  fn.write_graph.html  index.html  sidebar-items.js
mc_cfg_to_dot/cfg/: fn.add_statements.html  fn.format_range.html  index.html  sidebar-items.js  trait.AddToGraph.html  type.CfgGraph.html
mc_cfg_to_dot/src/: cfg.rs  lib.rs  main.rs
mc_cfg_to_dot/tests/: integration.rs
mc_common/: Cargo.toml  all.html  fn.input.html  fn.input_to_string.html  fn.output.html  index.html  sidebar-items.js
mc_error/: Cargo.toml  all.html  index.html
mc_ir/: Cargo.toml  all.html  enum.Arg.html  (+7 more)
mcc/: Cargo.toml  all.html  fn.canonicalize_path.html  fn.cli.html  fn.mcc.html  index.html  sidebar-items.js
mcc/src/: lib.rs  main.rs
mcc/tests/: integration.rs
(+196 files in other folders)
