[package]
name = "mc_ast_to_dot"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
clap = "2.33"
mc_common = { path = "../mc_common" }
mc_parser = { path = "../mc_parser" }
petgraph = "0.5.0"

[dev-dependencies]
indoc = "0.3.4"
pest = "2.1"
pretty_assertions = "0.6.1"
unindent = "0.1.5"
